test/library/standard/List/pop/listPopIndexHaltEmpty.good
listPopIndexHaltEmpty.chpl:5: error: halt reached - Called "list.pop" on an empty list.
