test/library/standard/List/pop/listPopIndexHaltEmpty.chpl
private use List;

var lst: list(int);

lst.pop();
